[project]
name = "po-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "diskcache>=5.6.0",
    "fastmcp>=3.2.4",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "python-dateutil>=2.8.0",
    "requests>=2.31.0",
    "respx>=0.23.1",
]
